[package]
name = "stracciatella_dll"
version = "0.1.0"
authors = ["Stefan Lau <github@stefanlau.com>"]

[profile.dev]
rpath = true
[profile.release]
rpath = true
debug = true

[lib]
crate-type = ["dylib"]
name = "stracciatella"
path = "src/stracciatella.rs"

[dependencies]
libc = "0.2"
serde = "1"
serde_json = "1"

[dependencies.stracciatella]
path = "./stracciatella"

[dev-dependencies]
regex = "0.1"
tempdir = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
user32-sys = "0.2"
shell32-sys = "0.1"
